fix(estilos): aumentar tamanho da fonte dos ícones de tecnologias para melhor legibilidade

--- a/css/style.css
+++ b/css/style.css
@@ -809,12 +809,12 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .tecnologias i {
-  font-size: 15px;
+  font-size: 25px;
   color: rgb(97, 97, 97)
 }
 
 .generalinformation i {
-  font-size: 15px;
+  font-size: 25px;
   transition: 0.7s;
   color: rgb(97, 97, 97)
 }
